--- a/index.htm
+++ b/index.htm
@@ -107,6 +107,7 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 			I am seeking highly motivated and focused students with Backgrounds &amp; Interests in Computer Science, Mathematics, and Engineering.
       
       <ul>
+      	    <li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/china-scholarship-council-csc-scholarship">MQ-CSC (China Scholarship Council) Scholarship</a> (for internationl PhD students from China, due: <b><font color="#FF0000">05 February 2024</font></b>)</li>
       	    <li><a href="https://www.mq.edu.au/research/phd-and-research-degrees/scholarships/scholarship-search">Master and PhD Students</a><a></a></li><a>
       	    </a><li><a></a><a href="https://www.mq.edu.au/research/phd-and-research-degrees/explore-research-degrees/cotutelle-and-joint-phd">Cotutelle&amp;Joint PhD Students (双博士项目)</a></li>
       	    <li><a href="https://www.mq.edu.au/research/phd-and-research-degrees/scholarships/scholarship-search/data/china-scholarship">China Scholar Council (CSC)-MQ Joint PhD Students</a></li>
@@ -221,16 +222,24 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	<br>
 	<ol>
 
-<Li>P. Ding, Y. Wang, G. Liu and X. Zhou, <b>Few-Shot Semantic Relation Prediction across Heterogeneous Graphs</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> (accepted in February 2023).</li>
 
 
-<Li>H. Du, H. Yuan, P. Zhao, D. Wang, V. S. Sheng, Y. Liu, G. Liu and L. Zhao, <b>Feature-aware Contrastive Learning with Bidirectional Transformers for Sequential Recommendation</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> (accepted in February 2023).</li>
+<Li>C. Wu, H. Yuan, P. Zhao, J. Qu, V. Sheng and G. Liu, <b>Dual-Supervised Contrastive Learning for Bundle
+Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),</i> (accepted in 2023).</li>
 
-<li>P. Zhao, Y. Fang, G. Liu, Y. Liu, V. S. Sheng, L. Zhao and X. Zhou, <b>A Quaternion-Based Graph Convolution Network for Recommendation</b>, <i>World Wide Web Journal</i> (accepted in February 2023).</li>	
+
+<Li>Y. Hao, P. Zhao, X. Xian, G. Liu, L. Zhao, Y. Liu, V. Sheng and X. Zhou, <b>Learnable Model Augmentation Contrastive Learning for Sequential Recommendation</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> (accepted in 2023).</li>
+
+<Li>Y. Hao, T. Zhang, P. Zhao, Y. Liu, V. Sheng, J. Xu, G. Liu and X. Zhou, <b>Feature-Level Deeper Self-Attention Network With Contrastive Learning for Sequential Recommendation</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> Vol. 35, Issue 10, pp. 10112-10124, 2023.</li>
 
 
-<li>F. Wang, G. Li, Y. Wang, W. Rafique, M. Khosravi, G. Liu, Y. Liu and L. Qi, <b>Privacy-aware Traffic Flow Prediction based on Multi-party Sensor Data with Zero Trust in Smart City</b>, <i>ACM Transactions on Internet Technology (TOIT)</i> (accepted in January 2023).</li>	
+<Li>P. Ding, Y. Wang, G. Liu and X. Zhou, <b>Few-Shot Semantic Relation Prediction across Heterogeneous Graphs</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> Vol. 35, Issue, 10, 2023.</li>
 
+
+<li>F. Wang, G. Li, Y. Wang, W. Rafique, M. Khosravi, G. Liu, Y. Liu and L. Qi, <b>Privacy-aware Traffic Flow Prediction based on Multi-party Sensor Data with Zero Trust in Smart City</b>, <i>ACM Transactions on Internet Technology (TOIT)</i> Vol. 23, Issue 3, pp. 1-19, 2023.</li>	
+
+
+<li>P. Zhao, Y. Fang, G. Liu, Y. Liu, V. S. Sheng, L. Zhao and X. Zhou, <b>A Quaternion-Based Graph Convolution Network for Recommendation</b>, <i>World Wide Web Journal</i> 26, 2835-2854, 2023.</li>	
 
 <Li>J. Lu, X. Zhan, G. Liu, X. Zhan and X. Deng, <b>BSTC: A Fake Review Detection Model Based on a Pre-Trained Language Model and Convolutional Neural Network</b>, <i>Electronics,</i>Vol. 12, No. 10, May 2023.</li>
 
@@ -320,7 +329,11 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	<ol>
 
 
-<li>P. Ding, Y. Wang and G. Liu, <b>	Cross-heterogeneity Graph Few-shot Learning</b>, CIKM 2023.</li>
+
+<li>X. Qin, H. Yuan, P. Zhao, G. Liu, F. Zhuang and V. Sheng, <b>Intent Contrastive Learning with Cross Subsequences for Sequential Recommendation</b>, WSDM 2024.</li>
+
+
+<li>P. Ding, Y. Wang and G. Liu, <b>Cross-heterogeneity Graph Few-shot Learning</b>, CIKM 2023.</li>
 
 
 <li>H. Yuan, P. Zhao, X. Xian, G. Liu, Y. Liu, V. S. Sheng and L. Zhao, <b>Sequential Recommendation with Probabilistic Logical Reasoning</b>, IJCAI 2023.</li>
@@ -503,7 +516,7 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
        <li>Publicity Chair: ATC2013, ATC2014</li>
 
 	
-	   <li>PC Member: WSDM2024, WWW2024</li>
+	   <li>PC Member: WSDM2024, WWW2024, SDM2024</li>
 	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023 (Senior PC)</li>
 	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022,  IEEE BigComp2022, WISE2022</li>
 	  <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
