--- a/index.htm
+++ b/index.htm
@@ -45,8 +45,8 @@ line-height: 100%;
 font-size: 180%;
 line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
             <span>Senior Lecturer (Associate Professor in North American)</span><br>
+            <span>Course Director for Stream "Data Science"</span><br>
             <span>Deputy Director of Master by Research</span><br>
-			<span>Deputy Program Leader of Master of Information Systems Management</span><br>
 			 <!--<span>Program Leader of Master of Information System Management (MISM)</span><br>-->
             <span><a href="https://www.mqdatax.net/">Macquarie University DataX Research Center</a></span><br>
             <span> <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing">School of Computing</a> </span><br>
@@ -196,7 +196,10 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 <font color="red" ,size="4"> Visitors</font>
 <ul>
+       	<li>Huanhuan Yuan, visiting PhD student, Soochow University, China, 2024-2025</li>
+       	<li>Haojie Li, visiting PhD student, Qingdao University of Science and Technology, China, 2024-2025</li>
        	<li>Zhihong Cui, visiting PhD student, Shandong University, China, 2023-2024</li>
+
        </ul>
 
 </div>
@@ -223,6 +226,12 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 	<ol>
 
 
+
+<Li>C. Long, H. Yuan, J. Fang, X. Xian, G. Liu, V. Sheng and P. Zhao, <b>Learning Global and Multi-granularity Local Representation with MLP for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD),</i> (accepted in 2023).</li>
+
+
+<Li>H. Du, H. Yuan, P. Zhao, D. Wang, V. Sheng, Y. Liu, G. Liu and L. Zhao, <b>Feature-aware Contrastive Learning with
+Bidirectional Transformers for Sequential Recommendation</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> (accepted in 2023).</li>
 
 <Li>C. Wu, H. Yuan, P. Zhao, J. Qu, V. Sheng and G. Liu, <b>Dual-Supervised Contrastive Learning for Bundle
 Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),</i> (accepted in 2023).</li>
@@ -329,9 +338,7 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 	<ol>
 
 
-
-<li>Y. Hao, P. Zhao, J. Fang, J. Qu, G. Liu, F. Zhuang, V. Sheng and X. Zhou <b>Meta-optimized Joint Generative and Contrastive Learning for Sequential Recommendation</b>, ICDE 2024.</li>
-
+<li>Y. Hao, P. Zhao, J. Fang, J. Qu, G. Liu, F. Zhuang, V. Sheng and X. Zhou, <b>Meta-optimized Joint Generative and Contrastive Learning for Sequential Recommendation</b>, ICDE 2024.</li>
 
 <li>X. Qin, H. Yuan, P. Zhao, G. Liu, F. Zhuang and V. Sheng, <b>Intent Contrastive Learning with Cross Subsequences for Sequential Recommendation</b>, WSDM 2024.</li>
 
@@ -514,12 +521,13 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
        <li>PC Co-Chair, The First Internal Workshops on Knowledge Acquisition, Representation and Management (KARM 2017) in conjunction with WISE2017, Moscow, Russia, 7-11 October, 2017. </li>
        	<li>PC Co-Chair, The Second International Workshop on Big Data Management and Service (BDMS2015) in conjunction with DASFAA2015, Hanoi, Vietnam, 20-23 April, 2015.</li>
 
+       <li>Panel Discussion Chair: ADMA2024
        <li>Special Session Chair: DSAA2020</li>
        <li>Publication Chair: APWeb2014, APWeb2016, BESC2016</li>
        <li>Publicity Chair: ATC2013, ATC2014</li>
 
 	
-	   <li>PC Member: WSDM2024, WWW2024, SDM2024</li>
+	   <li>PC Member: KDD2024, WSDM2024, WWW2024, SDM2024, IJCAI2024, WISE2024</li>
 	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023 (Senior PC)</li>
 	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022,  IEEE BigComp2022, WISE2022</li>
 	  <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
