--- a/index.htm
+++ b/index.htm
@@ -45,9 +45,9 @@ line-height: 100%;
 font-size: 180%;
 line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
             <span>Senior Lecturer (Associate Professor in North American)</span><br>
-            <span>Course Director for Stream "Data Science"</span><br>
-            <span>Deputy Director of Master by Research</span><br>
-			 <!--<span>Program Leader of Master of Information System Management (MISM)</span><br>-->
+            <span>Course Director for Stream <a href="https://www.mq.edu.au/study/find-a-course/courses/master-of-data-science">"Data Science"</span><br></a>
+            <span>Deputy Director of <a href="https://www.mq.edu.au/study/find-a-course/courses/bachelor-of-philosophy-master-of-research-science-and-engineering">Master by Research</span><br></a>
+			 
             <span><a href="https://www.mqdatax.net/">Macquarie University DataX Research Center</a></span><br>
             <span> <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing">School of Computing</a> </span><br>
             <span> <a href="http://www.mq.edu.au/">Macquarie University</a> </span><br>
