--- a/index.htm
+++ b/index.htm
@@ -237,6 +237,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 
 
+<Li>C. Chen, J. Cui, G. Liu, J. Wu and L. Wang, <b>Survey and Open Problems in Privacy Preserving Knowledge Graph: Merging, Query, Representation, Completion and Applications</b>, <i>International Journal of Machine Learning and Cybernetics,</i> (accepted in 2024).</li>
+
+
 <Li>C. Long, H. Yuan, J. Fang, X. Xian, G. Liu, V. Sheng and P. Zhao, <b>Learning Global and Multi-granularity Local Representation with MLP for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD),</i> (accepted in 2023).</li>
 
 
@@ -497,6 +500,7 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 		<li>Co-EIC, EAI Endorsed Transactions on Cloud Systems, EUDL, Since 2020. </li>
 		<li>Associate Editor, Human-centric Computing and Information Sciences (HCIS), Since 2021.</li>
 		<li>Associate Editor, Frontiers in Big Data, Frontiers, Since 2018. </li>
+		<li>Editorial Board, Computer, Materials & Continua (CMC), Tech Science Press, Since 2024. </li>
 		<li>Editorial Board, Electronics, MDPI, Since 2021. </li>
 
 
