--- a/index.htm
+++ b/index.htm
@@ -351,6 +351,14 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 	<ol>
 
 
+
+<li>R. Xu, G. Liu, Y. Wang, X. Zhang, K. Zheng and X. Zhou, <b>Adaptive Hypergraph Network for Trust Prediction</b>, ICDE 2024.</li>
+
+
+<li>Y. Hao, P. Zhao, J. Qu, L. Zhao, G. Liu, F. Zhuang, V. Sheng and X. Zhou, <b>Meta-optimized Structural and Semantic Contrastive Learning for Graph Collaborative Filtering</b>, ICDE 2024.</li>
+
+
+
 <li>Y. Hao, P. Zhao, J. Fang, J. Qu, G. Liu, F. Zhuang, V. Sheng and X. Zhou, <b>Meta-optimized Joint Generative and Contrastive Learning for Sequential Recommendation</b>, ICDE 2024.</li>
 
 <li>X. Qin, H. Yuan, P. Zhao, G. Liu, F. Zhuang and V. Sheng, <b>Intent Contrastive Learning with Cross Subsequences for Sequential Recommendation</b>, WSDM 2024.</li>
@@ -476,9 +484,9 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
       
       <ul>
 	    <li>Data Science II, Macquarie University, S2 2022 (for Optus, Lecturer)</li>
-	    <li>Data Science, Macquarie University, S2 2022 (for Postgraduate Students, Lecturer)</li>
+	    <li>Data Science, Macquarie University, S2 2022, 2023 (for Postgraduate Students, Lecturer)</li>
 	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
-		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
+		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023, 2024 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
 		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020, 2021 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced System and Network Security, Macquarie University, S2 2018 (for Postgraduate Students, Lecturer)</li>
       	<li>Enterprise Systems Integration, Macquarie University, S2 2018, S2 2019 (for Undergraduate Students, Lecturer)</li>
