--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@ line-height: 100%;
 <span class="mh" style="font-family: Times New Roman;
 font-size: 180%;
 line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
-            <span>Senior Lecturer (Associate Professor in North American)</span><br>
+            <span>Senior Lecturer (Associate Professor in North America)</span><br>
             <span>Course Director for Stream <a href="https://www.mq.edu.au/study/find-a-course/courses/master-of-data-science">"Data Science"</span><br></a>
             <span>Deputy Director of <a href="https://www.mq.edu.au/study/find-a-course/courses/bachelor-of-philosophy-master-of-research-science-and-engineering">Master by Research</span><br></a>
 			 
@@ -351,6 +351,12 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 	<ol>
 
 
+
+<li>H. Li, W. Wei, G. Liu, J. Liu, F. Jiang and J. Du, <b>Intent Distribution based Bipartite Graph Representation Learning</b>, SIGIR2024.</li>
+
+<li>L. Zhang, C. Li, Y. Lei, Z. Sun and G. Liu, <b>An Empirical Analysis on Multi-turn Conversational Recommender Systems</b>, SIGIR2024.</li>
+
+<li> H. Li, Z. Cheng, X. Yu, J. Liu, G. Liu and J. Du,	<b>Behavior Pattern Mining-based Multi-Behavior Recommendation</b>, SIGIR2024. </li>
 
 <li>R. Xu, G. Liu, Y. Wang, X. Zhang, K. Zheng and X. Zhou, <b>Adaptive Hypergraph Network for Trust Prediction</b>, ICDE 2024.</li>
 
