--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@ line-height: 100%;
 <span class="mh" style="font-family: Times New Roman;
 font-size: 180%;
 line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
-            <span>Senior Lecturer (Associate Professor in North American)</span><br>
+            <span>Senior Lecturer (Associate Professor in North America)</span><br>
             <span>Course Director for Stream <a href="https://www.mq.edu.au/study/find-a-course/courses/master-of-data-science">"Data Science"</span><br></a>
             <span>Deputy Director of <a href="https://www.mq.edu.au/study/find-a-course/courses/bachelor-of-philosophy-master-of-research-science-and-engineering">Master by Research</span><br></a>
 			 
@@ -237,6 +237,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 
 
+<Li>C. Chen, J. Cui, G. Liu, J. Wu and L. Wang, <b>Survey and Open Problems in Privacy Preserving Knowledge Graph: Merging, Query, Representation, Completion and Applications</b>, <i>International Journal of Machine Learning and Cybernetics,</i> (accepted in 2024).</li>
+
+
 <Li>C. Long, H. Yuan, J. Fang, X. Xian, G. Liu, V. Sheng and P. Zhao, <b>Learning Global and Multi-granularity Local Representation with MLP for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD),</i> (accepted in 2023).</li>
 
 
@@ -348,7 +351,8 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 	<ol>
 
 
-<li>Y. Hao, P. Zhao, J. Fang, J. Qu, G. Liu, F. Zhuang, V. Sheng and X. Zhou, <b>Meta-optimized Joint Generative and Contrastive Learning for Sequential Recommendation</b>, ICDE 2024.</li>
+
+
 
 <li>X. Qin, H. Yuan, P. Zhao, G. Liu, F. Zhuang and V. Sheng, <b>Intent Contrastive Learning with Cross Subsequences for Sequential Recommendation</b>, WSDM 2024.</li>
 
@@ -473,9 +477,9 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
       
       <ul>
 	    <li>Data Science II, Macquarie University, S2 2022 (for Optus, Lecturer)</li>
-	    <li>Data Science, Macquarie University, S2 2022 (for Postgraduate Students, Lecturer)</li>
+	    <li>Data Science, Macquarie University, S2 2022, 2023 (for Postgraduate Students, Lecturer)</li>
 	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
-		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
+		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023, 2024 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
 		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020, 2021 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced System and Network Security, Macquarie University, S2 2018 (for Postgraduate Students, Lecturer)</li>
       	<li>Enterprise Systems Integration, Macquarie University, S2 2018, S2 2019 (for Undergraduate Students, Lecturer)</li>
@@ -497,6 +501,7 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 		<li>Co-EIC, EAI Endorsed Transactions on Cloud Systems, EUDL, Since 2020. </li>
 		<li>Associate Editor, Human-centric Computing and Information Sciences (HCIS), Since 2021.</li>
 		<li>Associate Editor, Frontiers in Big Data, Frontiers, Since 2018. </li>
+		<li>Editorial Board, Computer, Materials & Continua (CMC), Tech Science Press, Since 2024. </li>
 		<li>Editorial Board, Electronics, MDPI, Since 2021. </li>
 
 
