--- a/index.htm
+++ b/index.htm
@@ -237,10 +237,13 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
 
 
 
+<Li>X. Liu, Y. Hao, L. Zhao, G. Liu, V. Sheng and P. Zhao, <b>LMACL: Improving Graph Collaborative Filtering with Learnable Model Augmentation Contrastive Learning</b>, <i>ACM Transactions on Knowledge Discovery from Data (ACM TKDD),</i> (accepted in 2024).</li>
+
+
 <Li>C. Chen, J. Cui, G. Liu, J. Wu and L. Wang, <b>Survey and Open Problems in Privacy Preserving Knowledge Graph: Merging, Query, Representation, Completion and Applications</b>, <i>International Journal of Machine Learning and Cybernetics,</i> (accepted in 2024).</li>
 
 
-<Li>C. Long, H. Yuan, J. Fang, X. Xian, G. Liu, V. Sheng and P. Zhao, <b>Learning Global and Multi-granularity Local Representation with MLP for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (TKDD),</i> (accepted in 2023).</li>
+<Li>C. Long, H. Yuan, J. Fang, X. Xian, G. Liu, V. Sheng and P. Zhao, <b>Learning Global and Multi-granularity Local Representation with MLP for Sequential Recommendation</b>, <i>ACM Transactions on Knowledge Discovery from Data (ACM TKDD),</i> (accepted in 2023).</li>
 
 
 <Li>H. Du, H. Yuan, P. Zhao, D. Wang, V. Sheng, Y. Liu, G. Liu and L. Zhao, <b>Feature-aware Contrastive Learning with
