--- a/index.htm
+++ b/index.htm
@@ -538,7 +538,7 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
              <ul>
 		   	  <li>2024: Current Genomics (Q3), Electronics (Q2)</li>
 		      <li>2023: Applied Sciences (Q2), Electronics (Q2)</li>
-		      <li>2022: Applied Sciences (Q2</li>
+		      <li>2022: Applied Sciences (Q2)</li>
 			  <li>2021: IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI, Q1)</li>
 			  <li>2020: Complexity (Q1), Journal of Database Management (Q2) </li>
 			  <li>2019: World Wide Web Journal (Q1)</li>
