--- a/index.htm
+++ b/index.htm
@@ -44,11 +44,11 @@ line-height: 100%;
 <span class="mh" style="font-family: Times New Roman;
 font-size: 180%;
 line-height: 180%;">Dr. Guanfeng Liu (PhD)</span><br>
+			
             <span>Senior Lecturer (Associate Professor in North America)</span><br>
             <span>Course Director for Stream <a href="https://www.mq.edu.au/study/find-a-course/courses/master-of-data-science">"Data Science"</span><br></a>
             <span>Deputy Director of <a href="https://www.mq.edu.au/study/find-a-course/courses/bachelor-of-philosophy-master-of-research-science-and-engineering">Master by Research</span><br></a>
-			 
-            <span><a href="https://www.mqdatax.net/">Macquarie University DataX Research Center</a></span><br>
+			<span>IEEE Senior Member</span><br>
             <span> <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing">School of Computing</a> </span><br>
             <span> <a href="http://www.mq.edu.au/">Macquarie University</a> </span><br>
             <span> Sydney, Australia, 2109</span><br>
@@ -355,15 +355,6 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 	<ol>
 
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-<li>R. Xu, G. Liu, Y. Wang, X. Zhang, K. Zheng and X. Zhou, <b>Adaptive Hypergraph Network for Trust Prediction</b>, ICDE 2024.</li>
-
-=======
-<li>Y. Hao, P. Zhao, J. Fang, J. Qu, G. Liu, F. Zhuang, V. Sheng and X. Zhou, <b>Meta-optimized Joint Generative and Contrastive Learning for Sequential Recommendation</b>, ICDE 2024.</li>
->>>>>>> f3c4633c08a571411e668aba18142102ad4e4b61
-=======
 
 <li>H. Li, W. Wei, G. Liu, J. Liu, F. Jiang and J. Du, <b>Intent Distribution based Bipartite Graph Representation Learning</b>, SIGIR2024.</li>
 
@@ -373,7 +364,6 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 
 <li>R. Xu, G. Liu, Y. Wang, X. Zhang, K. Zheng and X. Zhou, <b>Adaptive Hypergraph Network for Trust Prediction</b>, ICDE 2024.</li>
 
->>>>>>> 1a594cf568216942f83a2572a62cb88be1f04b79
 
 <li>Y. Hao, P. Zhao, J. Qu, L. Zhao, G. Liu, F. Zhuang, V. Sheng and X. Zhou, <b>Meta-optimized Structural and Semantic Contrastive Learning for Graph Collaborative Filtering</b>, ICDE 2024.</li>
 
