--- a/index.htm
+++ b/index.htm
@@ -108,9 +108,9 @@ Dr. Guanfeng Liu is a Senior Lecturer in <a href="https://www.mq.edu.au/faculty-
       
       <ul>
       	   
-		<li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/road-to-research-scholarship">International Road to Research Scholarship (Master by Coursework Students)</a> (due: <b><font color="#FF0000">26 April 2024</font></b>)</li>
+		<li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/road-to-research-scholarship">International Road to Research Scholarship (Master by Coursework Students)</a> (due: <b><font color="#FF0000">31 October 2024</font></b>)</li>
 
-		<li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/international-scholarship-round">International Research Scholarship Round (PhD Students)</a> (due: <b><font color="#FF0000">01 March 2024</font></b>)</li>
+		<li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/international-scholarship-round">International Research Scholarship Round (PhD and MRes Students)</a> (due: <b><font color="#FF0000">31 July 2024</font></b>)</li>
 
 
 
