--- a/index.htm
+++ b/index.htm
@@ -355,6 +355,11 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 	<ol>
 
 
+<li>Y. Hao, F. Zhuang, D. Wang, G. Liu, V. Sheng and P. Zhao, <b>A General Strategy Graph Collaborative Filtering for Recommendation Unlearning</b>, CIKM2024.</li>
+<li>H. Xue, Q. Ma, G. Liu, J. Qu, Y. Liu and A. Liu, <b>CLR2G: Cross modal Contrastive Learning on Radiology Report Generation</b>, CIKM2024.</li>
+
+<li>Y. Liu, G. Liu, Q. Ma, Z. Li, S. Wen, L. Zhao and A. Liu <b>KMCT: k-Means Clustering of Trajectories Efficiently in Location-Based Services</b>, CIKM2024.</li>
+
 
 <li>H. Li, W. Wei, G. Liu, J. Liu, F. Jiang and J. Du, <b>Intent Distribution based Bipartite Graph Representation Learning</b>, SIGIR2024.</li>
 
@@ -478,13 +483,7 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
       <ul>
       	<li>Senior Lecturer, Macquarie University, Sydney, Australia, January 2022 - now</li>
       	<li>Lecturer/Assistant Professor, Macquarie University, Sydney, Australia, June 2018 - December 2021</li>
-		<li>Visiting Senior Lecturer, The University of Queensland, Brisbane, Australia, June 2017 - June 2018</li>
 		<li>Associate Professor, Soochow University, China, October 2013 - June 2017</li>
-		<li>Visiting Scholar, Macquarie University, Sydney, Australia, August 2015</li>
-		<li>Visiting Scholar, The University of New South Wales (UNSW), Sydney, Australia, February 2015</li>
-		<li>Visiting Research Fellow, The University of Technology Sydney, Sydney, Australia, February 2013 - August 2013 </li>
-        <li>Research Fellow, Macquarie University, Sydney, Australia, April 2011 - September 2013</li>
-        <li>Research Assistant, Macquarie University, Sydney, Australia, July 2010 - March 2011</li>
       </ul>
 </div>
 
