--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,13 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
 	<font color="red" ,size="4"> Complete Students </font> 
 	<ul>
 		
+		
+		<li>Dr. Pengfei Ding, PhD Student at Macquarie University, 2021-2024, <i>now an Postdoc Research Fellow at Macquarie University</i></li>
+
+		    <ul>
+		   	  <li>recipient of the HDR Raising Star Award, School of Computing, Macquarie University, 2022</li>
+		   	</ul>
+
 		<li>Dr. Feng Zhu, PhD Student at Macquarie University, 2017-2020, <i>now a Senior Data Scientist at <a href="https://www.alibabagroup.com/cn/global/home">Alibaba Group</a></i></li>
 		   <ul>
 		   	  <li>recipient of the Vice-Chancellor's Commendation for Academic Excellence, Macquarie University, 2020</li>
@@ -176,8 +183,6 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
 		      <li>recipient of the National Scholarship for the Outstanding Marster Students, Chinese Goverment, 2015</li>
 		    </ul>
 		
-      
-       	<li>Dr. Pengfei Ding, PhD Student at Macquarie University, 2021-2024, <i>now an Postdoc Research Fellow at Macquarie University University</i></li>
 
        	<li>Dr. Guohao Sun, PhD Student at Macquarie University, 2016-2019, <i>now an Associate Professor at <a href="http://www.dhu.edu.cn/">Donghua University</a> </i></li>
 	   <ul>
