change name of jpg

--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@ line-height: 100%;
 
 <body id="main" data-new-gr-c-s-check-loaded="14.993.0" data-gr-ext-installed="">
 <div id="wrapper" style="overflow: auto;">
-	<div id="bio_photo"><img style="border: 1px solid white; float: left; margin-left:1px;" src="./gfliu/MQ-liu.jpg" height="300" align="left"></div>
+	<div id="bio_photo"><img style="border: 1px solid white; float: left; margin-left:1px;" src="./gfliu/MQ-liu-2024.jpg" height="300" align="left"></div>
 <div id="profile" syple="float: left; margin-left:30px">
 <span class="mh" style="font-family: Times New Roman;
 font-size: 180%;
