--- a/index.htm
+++ b/index.htm
@@ -170,7 +170,7 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
 	<ul>
 		
 		
-		<li>Dr. Pengfei Ding, PhD Student at Macquarie University, 2021-2024, <i>now an Postdoc Research Fellow at Macquarie University</i></li>
+		<li>Dr. Pengfei Ding, PhD Student at Macquarie University, 2021-2024, <i>now a Postdoc Research Fellow at Macquarie University</i></li>
 
 		    <ul>
 		   	  <li>recipient of the HDR Raising Star Award, School of Computing, Macquarie University, 2022</li>
