--- a/index.htm
+++ b/index.htm
@@ -137,6 +137,8 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
       <ul>
 		  
 		  
+		   <li><b>Outstanding Reviewer</b>, The 31st ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD2025).</li>
+
 		   <li><b>The Best Student Paper Award</b>, The 9th IEEE International Conference on Data Science and Advanced Analytics (DSAA 2022, CORE B, Session: Data Science and Artificial Intelligence Enabled Trustworthy Recommendations), October 13-16, 2022, Shenzhen, China.</li>
 
 		  <li><b>The Best Student Paper Award</b>, The 19th International Conference on Web Information System Engineering (WISE 2018, CORE B), November 12-15, 2018, Dubai, United Arab Emirates.</li>
@@ -175,6 +177,8 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
 		    <ul>
 		   	  <li>recipient of the HDR Raising Star Award, School of Computing, Macquarie University, 2022</li>
 		   	</ul>
+
+		<li>Dr. Adeem Ali Anwar, PhD Student at Macquarie University, 2021-2024, <i>now a Lecturer at Kent Institute, Sydney, Australia</i></li>
 
 		<li>Dr. Feng Zhu, PhD Student at Macquarie University, 2017-2020, <i>now a Senior Data Scientist at <a href="https://www.alibabagroup.com/cn/global/home">Alibaba Group</a></i></li>
 		   <ul>
