--- a/index.htm
+++ b/index.htm
@@ -506,7 +506,8 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
 <div id="experience">
       <span class="sb">Working and Visiting</span> <br>
       <ul>
-      	<li>Senior Lecturer, Macquarie University, Sydney, Australia, January 2022 - now</li>
+      	<li>Associate Professor, Macquarie University, Sydney, Australia, January 2025 - now</li>
+      	<li>Senior Lecturer, Macquarie University, Sydney, Australia, January 2022 - December 2024</li>
       	<li>Lecturer/Assistant Professor, Macquarie University, Sydney, Australia, June 2018 - December 2021</li>
 		<li>Associate Professor, Soochow University, China, October 2013 - June 2017</li>
       </ul>
@@ -586,7 +587,7 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
        <li>Publicity Chair: ADC2024, ATC2013, ATC2014</li>
 
 	
-	  <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025</li>	
+	  <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025, WSDM2025, KDD2025</li>	
 	  <li>PC Member: KDD2024, WSDM2024, WWW2024, SDM2024, IJCAI2024, WISE2024</li>
 	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023 (Senior PC)</li>
 	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022,  IEEE BigComp2022, WISE2022</li>
