--- a/index.htm
+++ b/index.htm
@@ -251,6 +251,7 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
 
 
 
+<Li>P. Ding, Y. Wang, G. Liu, N. Wang and Z. Zhou, <b>Few-Shot Causal Representation Learning for Out-of-Distribution Generalization on Heterogeneous Graphs</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> (accepted in 2025).</li>
 
 <Li> G. Liu, L. Li, G. Liu and X. Wu, <b>Size-fixed Group Discovery via Multi-Constrained Graph Pattern Matching</b>, <i>Information Sciences</i>, Vol. 690, 2025.
 
@@ -265,7 +266,7 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
 
 
 <Li>H. Du, H. Yuan, P. Zhao, D. Wang, V. Sheng, Y. Liu, G. Liu and L. Zhao, <b>Feature-aware Contrastive Learning with
-Bidirectional Transformers for Sequential Recommendation</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> (accepted in 2023).</li>
+Bidirectional Transformers for Sequential Recommendation</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i> Vol 36, Issue 12, pp. 8192-8205, 2024.</li>
 
 <Li>C. Wu, H. Yuan, P. Zhao, J. Qu, V. Sheng and G. Liu, <b>Dual-Supervised Contrastive Learning for Bundle
 Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),</i> Vol. 11, Issue 3, pp. 3955-3965, 2024.</li>
@@ -284,9 +285,6 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 
 
 <li>P. Zhao, Y. Fang, G. Liu, Y. Liu, V. S. Sheng, L. Zhao and X. Zhou, <b>A Quaternion-Based Graph Convolution Network for Recommendation</b>, <i>World Wide Web Journal</i> 26, 2835-2854, 2023.</li>	
-
-<Li>J. Lu, X. Zhan, G. Liu, X. Zhan and X. Deng, <b>BSTC: A Fake Review Detection Model Based on a Pre-Trained Language Model and Convolutional Neural Network</b>, <i>Electronics,</i>Vol. 12, No. 10, May 2023.</li>
-
 
 
 <Li>P. Ding, G. Liu, Y. Wang, K. Zheng and X. Zhou, <b>MCTS: Adaptive Monte Carlo Tree Search for Temporal Path Discovery</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE),</i>Vol. 15, pp. 2243-2257, March 2023.</li>
@@ -519,9 +517,9 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
       
       <ul>
 	    <li>Data Science II, Macquarie University, S2 2022 (for Optus, Lecturer)</li>
-	    <li>Data Science, Macquarie University, S2 2022, 2023 (for Postgraduate Students, Lecturer)</li>
+	    <li>Data Science, Macquarie University, S2 2022, 2023, 2024 (for Postgraduate Students, Lecturer)</li>
 	    <li>Mining Unstructured Data, Macquarie University, S1 2020, 2021, 2022, 2023 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
-		<li>Big Data Technology, Macquarie University, S2 2019, 2020, 2021, 2022, 2023, 2024 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
+		<li>Big Data, Macquarie University, S2 2019, 2020, 2021, 2022, 2023, 2024 (for Postgraduate Students, Unit Convenor and Lecturer)</li>
 		<li>Introduction to Systems Design and Data Management, Macquarie University, S1 2019, 2020, 2021 (for Undergraduate Students, Lecturer)</li>
       	<li>Advanced System and Network Security, Macquarie University, S2 2018 (for Postgraduate Students, Lecturer)</li>
       	<li>Enterprise Systems Integration, Macquarie University, S2 2018, S2 2019 (for Undergraduate Students, Lecturer)</li>
