--- a/index.htm
+++ b/index.htm
@@ -108,9 +108,9 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
       
       <ul>
 
-      	<!--<li><li> <img src="new2.jpg"; width='30'; height='30'></img>--><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/international-scholarship-round">International Research Scholarship Round (PhD and MRes Students)</a> (due: <b><font color="#FF0000">02 March 2025</font></b>)</li>
+      	<li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/international-scholarship-round">International Research Scholarship Round (PhD and MRes Students)</a> (due: <b><font color="#FF0000">02 March 2025</font></b>)</li>
 
-      	<!--<li><li> <img src="new2.jpg"; width='30'; height='30'></img>--><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/road-to-research-scholarship">International Road to Research Scholarship (Master of Research)</a> (due: <b><font color="#FF0000">30 April 2025 </font></b>, MRes Admission, Session 2, due: <b><font color="#FF0000">02 March 2025 </font></b>)</li> 
+      	<li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/road-to-research-scholarship">International Road to Research Scholarship (Master of Research)</a> (due: <b><font color="#FF0000">30 April 2025 </font></b>, MRes Admission, Session 2, due: <b><font color="#FF0000">02 March 2025 </font></b>)</li> 
       	
       	  <!--<li> <img src="new2.jpg"; width='30'; height='30'></img><a href="https://www.mq.edu.au/research/phd-and-research-degrees/how-to-apply/scholarship-opportunities/scholarship-search/china-scholarship-council-csc-scholarship">MQ-CSC (China Scholarship Council) Scholarship</a> (for international PhD students from China, due: <b><font color="#FF0000">15 January 2025</font></b>)</li>-->   
 		
