--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,8 @@ line-height: 180%;">A/Prof. Guanfeng Liu (PhD)</span><br>
 <hr style="height: 3px;"> <br>
 <div id="description">
 <span style="font-size:110%">
-Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing"> School of Computing, </a> <a href="http://www.mq.edu.au/"> Macquarie University,</a> Sydney, Australia. Guanfeng got his PhD in computer science from Macquarie University in 2013. His research interests include graph database, graph neural network, and graph data mining.
+Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing"> School of Computing, </a> <a href="http://www.mq.edu.au/"> Macquarie University,</a> Sydney, Australia. Guanfeng got his PhD in computer science from Macquarie University in 2013. His research interests include graph database, graph neural network, and graph data mining. He has published more than 100 papers on international journals and conferences including, IEEE Transactionson Knowledge and Data Engineering, IEEE
+Transactions on Services Computing, IEEE Transactions on Emerging Topics in Computational Intelligence, ACM Transactions on the Web, ACM Transactions on Data Science, SIGMOD, ICDE, WWW, IJCAI, AAAI and CIKM, etc.
  </span>
 </div>
 <br>
@@ -98,6 +99,27 @@ Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/fac
 	  	<!--<li>Collaborators: <a href='http://www.hust.edu.cn'>HUST</a>, <a href='http://www.wjrcb.com'>Wujiang Rural Commercial Bank</a></li>-->
 	  </ul>
 	</ul>
+</div>
+
+<hr style="height: 3px;"> <br>
+
+<div id="Latest News">
+<span class="sb">Latest News</span><br> 
+
+<ul>
+
+<li>01/2025: I have been invited to serve as an <b>Area Chair</b> for <b>KDD 2025</b> (one of the flagship data mining conferences, CORE A*, CCF A)</li>
+
+<li>01/2025: Our research paper <b>"Few-Shot Causal Representation Learning for Out-of-Distribution Generalization on Heterogeneous Graphs"</b> was accepted by the top journal <b>IEEE TKDE</b> (JCR Q1, CCF A)</li>
+
+<li>12/2024: Our research paper <b>"Fuzzy Collaborative Reasoning"</b> was accepted by the top AI conference <b>AAAI 2025</b> (CORE A*, CCF A)</li>
+
+<li>11/2024: I have invited to serve as an <b>Senior PC</b> for <b>IJCAI 2025</b> (one of the best AI conferences, CORE A*, CCF A)
+
+
+
+</ul>
+
 </div>
 
 <hr style="height: 3px;"> <br>
