--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@ line-height: 180%;">A/Prof. Guanfeng Liu (PhD)</span><br>
 <div id="description">
 <span style="font-size:110%">
 Dr. Guanfeng Liu is an Associate Professor in <a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing"> School of Computing, </a> <a href="http://www.mq.edu.au/"> Macquarie University,</a> Sydney, Australia. Guanfeng got his PhD in computer science from Macquarie University in 2013. His research interests include graph database, graph neural network, and graph data mining. He has published more than 100 papers on international journals and conferences including, IEEE Transactionson Knowledge and Data Engineering, IEEE
-Transactions on Services Computing, IEEE Transactions on Emerging Topics in Computational Intelligence, ACM Transactions on the Web, ACM Transactions on Data Science, SIGMOD, ICDE, WWW, IJCAI, AAAI and CIKM, etc.
+Transactions on Services Computing, IEEE Transactions on Emerging Topics in Computational Intelligence, ACM Transactions on the Web, ACM Transactions on Data Science, SIGIR, ICDE, WWW, IJCAI, AAAI and CIKM, etc.
  </span>
 </div>
 <br>
@@ -107,6 +107,8 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 <span class="sb">Latest News</span><br> 
 
 <ul>
+
+<li>01/2025: I have been invited to serve as an <b>Editoral Board Member</b> for <b><a href="https://www.nature.com/srep/">Scientific Reports</a></b> (JCR Q1)</li>
 
 <li>01/2025: I have been invited to serve as an <b>Area Chair</b> for <b>KDD 2025</b> (one of the flagship data mining conferences, CORE A*, CCF A)</li>
 
@@ -605,13 +607,15 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
        <li>PC Co-Chair, The First Internal Workshops on Knowledge Acquisition, Representation and Management (KARM 2017) in conjunction with WISE2017, Moscow, Russia, 7-11 October, 2017. </li>
        	<li>PC Co-Chair, The Second International Workshop on Big Data Management and Service (BDMS2015) in conjunction with DASFAA2015, Hanoi, Vietnam, 20-23 April, 2015.</li>
 
+       <li>Area Chair: KDD2025</li>
        <li>Panel Discussion Chair: ADMA2024
        <li>Special Session Chair: DSAA2020</li>
        <li>Publication Chair: APWeb2014, APWeb2016, BESC2016</li>
        <li>Publicity Chair: ADC2024, ATC2013, ATC2014</li>
 
+
 	
-	  <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025, WSDM2025, KDD2025</li>	
+	  <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025, WSDM2025, KDD2025, SIGIR2025</li>	
 	  <li>PC Member: KDD2024, WSDM2024, WWW2024, SDM2024, IJCAI2024, WISE2024</li>
 	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023 (Senior PC)</li>
 	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022,  IEEE BigComp2022, WISE2022</li>
