--- a/index.htm
+++ b/index.htm
@@ -213,16 +213,17 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 	 <li><font color="red" ,="" size="4.7">Trustworthy AI: Ensuring Reliability, Fairness, and Transparency</font></li>
 	 <ul>
 
-	  <li><b>Abstract:</b> This research aims to develop robust methodologies for building trustworthy AI systems that prioritize reliability, fairness, transparency, and security. By integrating techniques such as explainable AI (XAI), bias mitigation, adversarial robustness, and ethical AI frameworks, the research will address critical challenges in ensuring AI models are interpretable, unbiased, and secure across various applications, including healthcare, finance, and cybersecurity.</li>
+	  <li><b>Abstract:</b> This research aims to develop robust methodologies for building trustworthy AI systems that prioritize reliability, fairness, transparency, and security. By integrating techniques such as explainable AI (XAI), bias mitigation, adversarial robustness, and ethical AI frameworks, the research will address critical challenges in ensuring AI models are <b>interpretable</b>, <b>unbiased</b>, and <b>secure</b> across various applications, including healthcare, finance, and cybersecurity.</li>
 	  	<li><b>Research Areas:</b> Explainable AI, Fairness in AI, Adversarial Robustness, Ethical AI, Secure Machine Learning, Trustworthy Data Analytics</li>
 	  	<!--<li>Collaborators: <a href='http://www.uq.edu.au'>UQ</a>, <a href='http://www.uestc.edu.cn'>UESTC</a>, and <a href='http://www.alibaba.com'>Alibaba</a></li>-->
 	  </ul>
+	  <br>
 
-	 <li><font color="red" ,="" size="4.7">Context-Aware Trust Management in Online Social Networks</font></li>
+	 <li><font color="red" ,="" size="4.7">AI-Powered Database Systems</font></li>
       <ul>
 
-	  <li>Abstract: Devising dynamic trust evaluation and trust evolution models with considering the effects of different contexts. The aim is to build up a trustworthy cyber-physical environment.</li>
-	  	<li>Research Skills: Database, Graph Learning, and Algorithms</li>
+	  <li><b>Abstract:</b> This research focuses on the development of next-generation AI-powered database systems designed to revolutionize data management, querying, and analysis processes across various domains. By leveraging advancements in AI, including machine learning, deep learning, and automated optimization, these systems will provide <b>intelligent data indexing</b>, <b>adaptive query optimization</b>, and <b>real-time analytics</b>. The goal is to create highly scalable, self-managing database platforms that can handle large-scale, heterogeneous, and dynamic datasets with exceptional efficiency and flexibility.</li>
+	  <li><b>Research Areas:</b> Automated Query Optimization, Intelligent Data Indexing, Machine Learning for Databases, Deep Learning Applications, Distributed Database Systems, AI-Driven Data Security and Privacy</li>
 	  	<!--<li>Collaborators: <a href='http://www.hust.edu.cn'>HUST</a>, <a href='http://www.wjrcb.com'>Wujiang Rural Commercial Bank</a></li>-->
 	  </ul>
 	</ul>
