--- a/index.htm
+++ b/index.htm
@@ -236,6 +236,10 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 
 <ul>
 
+
+<li>02/2025: Our research paper <b>"Intent Propagation Contrastive Collaborative Filtering"</b> was accepted by the top journal <b>IEEE TKDE</b> (JCR Q1, CCF A)</li>
+
+
 <li>02/2025: We are organizing a special issue, <b>"AI-Driven Intrusion Detection and Threat Analysis in Cybersecurity"</b>, in <em>Computers, Materials & Continua</em> (CMC, SCI IF=2.1, Q2), <a href="https://www.techscience.com/cmc/special_detail/AI-driven_intrusion_detection">Call for Paper is online</a> (Due: 31/08/2025).
 
 
@@ -406,6 +410,8 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 	<ol>
 
 
+<Li>H. Li, J. Du, G. Liu, F. Jiang, Y. Wang and X. Zhou, <b>Intent Propagation Contrastive Collaborative Filtering</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE)</i> (accepted in 2025).</li>
+
 <Li>P. Ding, Y. Wang, G. Liu, N. Wang and Z. Zhou, <b>Few-Shot Causal Representation Learning for Out-of-Distribution Generalization on Heterogeneous Graphs</b>, <i>IEEE Transactions on Knowledge and Data Engineering (TKDE)</i> (accepted in 2025).</li>
 
 
@@ -539,7 +545,7 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
 <li>Y. Hao, F. Zhuang, D. Wang, G. Liu, V. Sheng and P. Zhao, <b>A General Strategy Graph Collaborative Filtering for Recommendation Unlearning</b>, CIKM 2024.</li>
 
 
-<li>Y. Liu, G. Liu, Q. Ma, Z. Li, S. Wen, L. Zhao and A. Liu <b>KMCT: k-Means Clustering of Trajectories Efficiently in Location-Based Services</b>, CIKM 2024.</li>
+<li>Y. Liu, G. Liu, Q. Ma, Z. Li, S. Wen, L. Zhao and A. Liu, <b>KMCT: k-Means Clustering of Trajectories Efficiently in Location-Based Services</b>, CIKM 2024.</li>
 
 
 <li>H. Li, W. Wei, G. Liu, J. Liu, F. Jiang and J. Du, <b>Intent Distribution based Bipartite Graph Representation Learning</b>, SIGIR 2024.</li>
@@ -745,12 +751,12 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
 
 
 	
-	  <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025, WSDM2025, KDD2025, SIGIR2025</li>	
-	  <li>PC Member: KDD2024, WSDM2024, WWW2024, SDM2024, IJCAI2024, WISE2024</li>
-	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023 (Senior PC)</li>
+	  <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025, WSDM2025, KDD2025(Area Chair), SIGIR2025</li>	
+	  <li>PC Member: KDD2024, WSDM2024, WWW2024, SDM2024, IJCAI2024, CIKM2024, WISE2024</li>
+	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023(Senior PC)</li>
 	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022,  IEEE BigComp2022, WISE2022</li>
 	  <li>PC Member: IJCAI2021(Senior PC), CIKM2021(Senior PC), WWW2021, AAAI2021, WISE2021</li>
-	  <li>PC Member: IJCAI2020 (Senior PC), VLDB2020 Demo, AAAI2020, WWW2020, DASFAA2020, ECAI2020, SCC2020, WISE2020</li>
+	  <li>PC Member: IJCAI2020(Senior PC), VLDB2020 Demo, AAAI2020, WWW2020, DASFAA2020, ECAI2020, SCC2020, WISE2020</li>
 	  <li>PC Member: KDD2019, IJCAI2019, AAAI2019, CIKM2019, WISE2019, AI2019, BigComp2019, NDBC2019, IEEE DSC2019, IEEE SCC2019</li>
        <li>PC Member: DASFAA2018, NDBC2018, IJCAI2018, IEEE SCC2018, IEEE BigComp2018</li>
        <li>PC Member: ICYCSEE2017, BESC2017, IoP2017, NDBC2017, SOCA2017</li>
