--- a/index.htm
+++ b/index.htm
@@ -166,8 +166,8 @@ line-height: 100%;
         <div id="profile">
             <span class="mh">A/Prof. Guanfeng Liu (PhD)</span><br>
             <span>Associate Professor (Professor in North America)</span><br>
-            <span>Course Director for Stream <a href="https://www.mq.edu.au/study/find-a-course/courses/master-of-data-science">"Data Science"</a></span><br>
-            <span>Deputy Director of <a href="https://www.mq.edu.au/study/find-a-course/courses/bachelor-of-philosophy-master-of-research-science-and-engineering">Master by Research</a></span><br>
+            <span>Course Director of <a href="https://www.mq.edu.au/study/find-a-course/courses/master-of-data-science"> Data Science</a></span><br>
+            <span>Deputy Director of <a href="https://www.mq.edu.au/research/phd-and-research-degrees/explore-research-degrees/master-of-research">Master of Research</a></span><br>
             <span>IEEE Senior Member</span><br>
             <span><a href="https://www.mq.edu.au/faculty-of-science-and-engineering/departments-and-schools/school-of-computing">School of Computing</a></span><br>
             <span><a href="http://www.mq.edu.au/">Macquarie University</a></span><br>
