--- a/index.htm
+++ b/index.htm
@@ -237,6 +237,9 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 <ul>
 
 
+
+<li>03/2025: Our tutorial <b>"AI and Data Mining in the Era of Trust and Security"</b> has been accepted for presentation at PAKDD 2025, Sydney, Australia, June 10–13, 2025.
+
 <li>02/2025: Our research paper <b>"Intent Propagation Contrastive Collaborative Filtering"</b> was accepted by the top journal <b>IEEE TKDE</b> (JCR Q1, CCF A)</li>
 
 
