--- a/index.htm
+++ b/index.htm
@@ -237,6 +237,7 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 <ul>
 
 
+<li>03/2025: We are organizing a special session on <b>Private, Secure and Trust Data Analytics (<a href="https://pstda2025.github.io/">PSTDA</a>)</b> at <a href="https://adma2025.github.io/">ADMA 2025</a> (CCF C), Kyoto, Japan, October 22–24, 2025.
 
 <li>03/2025: Our tutorial <b>"AI and Data Mining in the Era of Trust and Security"</b> has been accepted for presentation at PAKDD 2025, Sydney, Australia, June 10–13, 2025.
 
