--- a/index.htm
+++ b/index.htm
@@ -237,11 +237,15 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 <ul>
 
 
+<li>03/2025: Our research paper <b>"PerFedKG: Two-Stage Information-Loop Federated Knowledge graph for Personalized Privacy-Preserving Recommendation Systems"</b> was accepted by the top journal, <b>Science China Information Sciences (SCIS)</b> (JCR Q1, CCF A)</li>
+
+<li>03/2025: I have been invited to serve as an <b>Senior PC</b> for <b>CIKM 2025</b> (CORE A, CCF B)</li>
+
 <li>03/2025: We are organizing a special session on <b>Private, Secure and Trust Data Analytics (<a href="https://pstda2025.github.io/">PSTDA</a>)</b> at <a href="https://adma2025.github.io/">ADMA 2025</a> (CCF C), Kyoto, Japan, October 22–24, 2025.
 
 <li>03/2025: Our tutorial <b>"AI and Data Mining in the Era of Trust and Security"</b> has been accepted for presentation at PAKDD 2025, Sydney, Australia, June 10–13, 2025.
 
-<li>02/2025: Our research paper <b>"Intent Propagation Contrastive Collaborative Filtering"</b> was accepted by the top journal <b>IEEE TKDE</b> (JCR Q1, CCF A)</li>
+<li>02/2025: Our research paper <b>"Intent Propagation Contrastive Collaborative Filtering"</b> was accepted by the top journal, <b>IEEE TKDE</b> (JCR Q1, CCF A)</li>
 
 
 <li>02/2025: We are organizing a special issue, <b>"AI-Driven Intrusion Detection and Threat Analysis in Cybersecurity"</b>, in <em>Computers, Materials & Continua</em> (CMC, SCI IF=2.1, Q2), <a href="https://www.techscience.com/cmc/special_detail/AI-driven_intrusion_detection">Call for Paper is online</a> (Due: 31/08/2025).
@@ -255,7 +259,7 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 
 <li>01/2025: I have been invited to serve as an <b>Area Chair</b> for <b>KDD 2025</b> (one of the flagship data mining conferences, CORE A*, CCF A)</li>
 
-<li>01/2025: Our research paper <b>"Few-Shot Causal Representation Learning for Out-of-Distribution Generalization on Heterogeneous Graphs"</b> was accepted by the top journal <b>IEEE TKDE</b> (JCR Q1, CCF A)</li>
+<li>01/2025: Our research paper <b>"Few-Shot Causal Representation Learning for Out-of-Distribution Generalization on Heterogeneous Graphs"</b> was accepted by the top journal, <b>IEEE TKDE</b> (JCR Q1, CCF A)</li>
 
 <li>12/2024: Our research paper <b>"Fuzzy Collaborative Reasoning"</b> was accepted by the top AI conference <b>AAAI 2025</b> (CORE A*, CCF A)</li>
 
