--- a/index.htm
+++ b/index.htm
@@ -237,6 +237,8 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 <ul>
 
 
+<li>03/2025: Our research paper <b>"Inter-Class and Intra-Class Re-Weighting for Topological-Imbalance Graph Neural Networks"</b> was accepted by the top journal, <b>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</b> (JCR Q1)</li>
+
 <li>03/2025: Our research paper <b>"PerFedKG: Two-Stage Information-Loop Federated Knowledge graph for Personalized Privacy-Preserving Recommendation Systems"</b> was accepted by the top journal, <b>Science China Information Sciences (SCIS)</b> (JCR Q1, CCF A)</li>
 
 <li>03/2025: I have been invited to serve as an <b>Senior PC</b> for <b>CIKM 2025</b> (CORE A, CCF B)</li>
